# duckdb-stata-do

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  LICENSE  Makefile  README.md  extension_config.cmake  index.html  install.sh
.github/workflows/: dodoc-release.yml
assets/styles/: tokens.css
docs/: BENEFITS.md  BRANDING.md  COLUMNAR_VERSION_CONTROL.md  M14.md  MISSING_COMMANDS.md  PLAN.md  READ_DTA.md  VARIABLE_SUBSTITUTION.md  WEBSITE.md  description.yml
rhistory-corpus/: .gitignore
rhistory-corpus/data/: commands.csv  files.csv
src/: stata_do_extension.cpp
src/cli/: dodoc.cpp
src/core/: dodo_core.cpp  dodo_core.hpp  string_utils.hpp
src/dta/: dta_writer.cpp  dta_writer.hpp  write_dta_function.cpp  write_dta_function.hpp
src/extension/: dodo_extension.cpp  dodo_extension.hpp
src/include/: dodo_core.hpp  dodo_extension.hpp  stata_do_extension.hpp  string_utils.hpp
src/read_dta/: dta_reader.cpp  dta_reader.hpp  read_dta_function.cpp  read_dta_function.hpp
test/data/: auto.dta  bench.do  firms.csv  generate_large.sql  panel_ts.csv
test/e2e/: cases.json  test_cli.sh  test_node.js  test_python.py  test_r.R
test/sql/: dodo.test  dodo_dta.test  read_dta.test  stata_do.test  write_dta.test
